OPENEJB-1371: Double encoding of persistence-unit root-url leads to issues in paths with spaces
git-svn-id: https://svn.apache.org/repos/asf/openejb/branches/openejb-3.1.x@1026527 13f79535-47bb-0310-9956-ffa450edef68