@@ -16,16 +16,10 @@
  */
 package org.apache.openejb.persistence;
 
-import org.apache.openejb.util.Join;
-
 import java.lang.instrument.ClassFileTransformer;
 import java.lang.instrument.IllegalClassFormatException;
 import java.net.MalformedURLException;
 import java.net.URL;
-import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URLDecoder;
-import java.net.URLEncoder;
 import java.security.ProtectionDomain;
 import java.util.ArrayList;
 import java.util.List;
@@ -212,24 +206,7 @@ public class PersistenceUnitInfoImpl implements PersistenceUnitInfo {
     }
 
     private URL toUrl(File root) throws MalformedURLException {
-        URL url = root.toURI().toURL();
-
-        try {
-            url.toURI();
-        } catch (URISyntaxException e) {
-            // Likely has spaces in it.
-            try {
-                String s = url.toExternalForm();
-                URL fixed = new URL(s.replaceAll(" ", "%20"));
-                fixed.toURI();
-                url = fixed;
-            } catch (MalformedURLException e1) {
-            } catch (URISyntaxException e1) {
-                // oh well, we tried.
-            }
-        }
-
-        return url;
+        return root.toURI().toURL();
     }
 
     public List<String> getManagedClassNames() {
